--- a/index.html
+++ b/index.html
@@ -1,1 +1,34 @@
 hello
+<!DOCTYPE html>
+<html lang="ja">
+    <head>
+        <meta charset="UTF-8">
+        <link rel="stylesheet" href="css/main.css">
+        <title>blog</title>
+    </head>
+    <body>
+        <section>
+            <h1>私のブログ</h1>
+            <ul>
+                <li><a href="pages/sake.html">お酒</a></li>
+                <li><a href="pages/pttf.html">駄菓子</a></li>
+
+            </ul>
+        </section>
+
+        <section>
+            <article>
+                <h3>私のお気に入り 1</h3>
+                <p>お酒</p>
+                <p>＜日本酒＞ 純米大吟醸 獺祭 </p>
+                <img src="img/dassai.jpg" alt="osake">
+            </article>
+            <article>
+                <h3>私のお気に入り 2</h3>
+                <p>駄菓子</p>
+                <p>ポテトフライ</p>
+                <img src="img/PPTF.jpg" alt="dagasi">
+            </article>
+        </section>
+    </body>
+</html>
