html no naiyou wo henkou

--- a/pages/pttf.html
+++ b/pages/pttf.html
@@ -7,7 +7,9 @@
     </head>
     <body>
         <section>
-            <h1>幼いころから大好きな駄菓子</h1>
+            <h1>ポテトフライ</h1>
+            <p>幼いころから大好きな駄菓子</p>
+            <p>1袋 4枚入り 43円</p>
             <img src="img/PPTF.jpg" alt="dagasi">
         </section>
     </body>
