--- a/pages/sake.html
+++ b/pages/sake.html
@@ -7,8 +7,9 @@
     </head>
     <body>
         <section>
-            <h1>飲みやすく風味も良い日本酒</h1>
-            <img src="img/dassai.jpg" alt="osake">
+            <h1>＜日本酒＞ 純米大吟醸 獺祭</h1>
+            <p>飲みやすく風味も良い日本酒</p>
+            <p>1800ml 4367円</p>
         </section>
     </body>
 </html>
