--- a/pages/sake.html
+++ b/pages/sake.html
@@ -3,13 +3,14 @@
     <head>
         <meta charset="UTF-8">
         <link rel="stylesheet" href="css/sub.css">
-        <title>dagasi</title>
+        <title>osake</title>
     </head>
     <body>
         <section>
             <h1>＜日本酒＞ 純米大吟醸 獺祭</h1>
             <p>飲みやすく風味も良い日本酒</p>
             <p>1800ml 4367円</p>
+            <img src="../img/dassai.jpg" alt="dassai">
         </section>
     </body>
 </html>
